--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -16,7 +16,7 @@
     .imgContainer {
       width: 700px;
       height: 700px;
-      background-color: crimson;
+      background-color: rgba(0, 170, 255, 0.985);
       border-radius: 50%;
       display: flex;
       align-items: flex-end;
@@ -73,7 +73,7 @@
 
         span {
           font-size: inherit;
-          color: crimson;
+          color: rgba(0, 170, 255, 0.985);
         }
 
         .ityped-cursor {
